2011-09-08  Andreas Schwab  <schwab@redhat.com>

	* elf/dl-load.c (lose): Check for non-null l.

2011-09-07  Ulrich Drepper  <drepper@gmail.com>

	* elf/dl-load.c (open_verify): Use O_CLOEXEC.

	* elf/dl-libc.c (dlerror_run): Pass back error code from
	dl_catch_error.

	[BZ #13123]
	* elf/dl-load.c (lose): Free l_origin if it is valid.

	* sysdeps/i386/i686/multiarch/strchr-sse2-bsf.S: Fix mixup in section
	names.
	* sysdeps/i386/i686/multiarch/strchr-sse2.S: Likewise.
	* sysdeps/i386/i686/multiarch/strlen-sse2-bsf.S: Likewise.
	* sysdeps/i386/i686/multiarch/strlen-sse2.S: Likewise.
	* sysdeps/i386/i686/multiarch/strrchr-sse2-bsf.S: Likewise.
	* sysdeps/i386/i686/multiarch/strrchr-sse2.S: Likewise.
	Patch by Liubov Dmitrieva <liubov.dmitrieva@intel.com>.

2011-08-01  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/fpu/e_hypot.c: New file.
	* sysdeps/powerpc/fpu/e_hypotf.c: New file.
	* sysdeps/powerpc/fpu/e_rem_pio2f.c: New file.
	* sysdeps/powerpc/fpu/k_rem_pio2f.c: New file.
	* sysdeps/powerpc/fpu/k_cosf.c: New file.
	* sysdeps/powerpc/fpu/k_sinf.c: New file.
	* sysdeps/powerpc/fpu/s_cosf.c: New file.
	* sysdeps/powerpc/fpu/s_sinf.c: New file.
	* sysdeps/powerpc/fpu/s_scalbnf.c: New file.
	* sysdeps/powerpc/fpu/s_float_bitwise.h: New file.

2011-08-15  Alan Modra  <amodra@gmail.com>

	[BZ #13092]
	* sysdeps/powerpc/Makefile (gmon): Move sysdep_routines to..
	* sysdeps/powerpc/powerpc64/Makefile (gmon): ..here..
	* sysdeps/powerpc/powerpc32/Makefile (gmon): ..and here.  Add
	ppc_mcount to static-only-routines.
	* sysdeps/powerpc/powerpc32/Versions: Export GLIBC_PRIVATE
	__mcount_internal.
	* sysdeps/powerpc/powerpc32/ppc-mcount.S (_mcount): Call
	__mcount_internal with usual JUMPTARGET.  Remove useless nop.

2011-08-18  David Flaherty  <flaherty@linux.vnet.ibm.com>

	* sysdeps/ieee754/ldbl-128ibm/s_fmal.c: New file which checks
	for finite and infinity parameters.

2011-08-04  Will Schmidt  <will_schmidt@vnet.ibm.com>
