@@ -1,3 +1,8 @@
+2011-09-02  Andreas Schwab  <schwab@redhat.com>
+
+	* nscd/selinux.c (avc_create_thread): Set PR_SET_KEEPCAPS before
+	spawning AVC thread.
+
 2011-09-08  Andreas Schwab  <schwab@redhat.com>
 
 	* elf/dl-load.c (lose): Check for non-null l.
